<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="500dp"
            android:layout_height="300dp"
            android:contentDescription="@string/imagen_de_ordenador_pong"
            android:src="@drawable/logo_final_pong" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="480dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/febrer_software"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/version"
            android:layout_width="480dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/version"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

    </LinearLayout>

</RelativeLayout>