<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/background"
        android:contentDescription="@string/imagen_de_fondo_con_lapices" />


        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true"
            android:scrollbarSize="5dp"
            android:scrollbarStyle="insideInset"
            android:scrollbarThumbVertical="@color/colorSpecial">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="90dp"
                android:layout_marginLeft="90dp"
                android:orientation="vertical"
                android:layout_marginBottom="60dp"
                android:padding="20dp">

                <TextView
                    android:id="@+id/guideTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/home_title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <!-- First Entry -->

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_title1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:lineSpacingExtra="15dp"
                            android:text="@string/contenido1"
                            android:textColor="@color/colorPrimary"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tv_paragraph1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:lineSpacingExtra="15dp"
                            android:padding="20dp"
                            android:textColor="@color/primary_text"
                            android:textSize="12sp" />

                    </LinearLayout>

                <!-- Second Entry -->

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_title2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:lineSpacingExtra="15dp"
                            android:text="@string/contenido2"
                            android:textColor="@color/colorPrimary"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tv_paragraph2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:lineSpacingExtra="15dp"
                            android:padding="20dp"
                            android:textColor="@color/primary_text"
                            android:textSize="12sp" />

                    </LinearLayout>


                <!-- Third Entry -->

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_title3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:lineSpacingExtra="15dp"
                            android:text="@string/contenido3"
                            android:textColor="@color/colorPrimary"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tv_paragraph3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:lineSpacingExtra="15dp"
                            android:padding="20dp"
                            android:textColor="@color/primary_text"
                            android:textSize="12sp" />

                    </LinearLayout>

                <!-- Four Entry -->

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="15dp"
                        android:text="@string/contenido4"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_paragraph4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="15dp"
                        android:padding="20dp"
                        android:textColor="@color/primary_text"
                        android:textSize="12sp" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

</RelativeLayout>